--- a/pipelines/fbc-builder/patch.yaml
+++ b/pipelines/fbc-builder/patch.yaml
@@ -53,16 +53,22 @@
 #     10  clamav-scan
 #     11  sast-coverity-check
 #     12  coverity-availability-check
-#     13  apply-tags
-#     14  push-dockerfile
-#     15  rpms-signature-scan
+#     13  sast-shell-check
+#     14  sast-unicode-check
+#     15  apply-tags
+#     16  push-dockerfile
+#     17  rpms-signature-scan
 - op: replace
   path: /spec/tasks/3/runAfter/0
   value: clone-repository
 - op: remove
-  path: /spec/tasks/14  # rpms-signature-scan
+  path: /spec/tasks/17  # rpms-signature-scan
 - op: remove
-  path: /spec/tasks/13  # push-dockerfile
+  path: /spec/tasks/16  # push-dockerfile
+- op: remove
+  path: /spec/tasks/14  # sast-unicode-scan
+- op: remove
+  path: /spec/tasks/13  # sast-shell-scan
 - op: remove
   path: /spec/tasks/12  # coverity-availability-check
 - op: remove
