oci-copy produced SBOM has a better name
Changes name to be `registry/repository@digest`of the pushed image.

JIRA: ISV-5323

Signed-off-by: Jan Koscielniak <jakoscie@redhat.com>

--- a/task/oci-copy-oci-ta/0.1/oci-copy-oci-ta.yaml
+++ b/task/oci-copy-oci-ta/0.1/oci-copy-oci-ta.yaml
@@ -305,6 +305,12 @@ spec:
             "specVersion": "1.5",
             "version": 1,
             "components": []
+            "metadata": {
+              "component": {
+                "type": "file",
+                "name": "${IMAGE%:*}@$(cat "$(results.IMAGE_DIGEST.path)")"
+              }
+            }
         }
         EOL
 
