--- a/task/oci-copy/0.1/oci-copy.yaml
+++ b/task/oci-copy/0.1/oci-copy.yaml
@@ -284,6 +284,12 @@ spec:
             "specVersion": "1.5",
             "version": 1,
             "components": []
+            "metadata": {
+              "component": {
+                "type": "file",
+                "name": "${IMAGE%:*}@$(cat "$(results.IMAGE_DIGEST.path)")"
+              }
+            }
         }
         EOL
 
