CODEOWNERS: add renovate groupName directives
And a python script to update renovate.json based on those directives.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,6 +2,7 @@
 
 *   @konflux-ci/build-maintainers
 
+# renovate groupName=build
 /task/acs-deploy-check                      @konflux-ci/build-maintainers
 /task/acs-image-check                       @konflux-ci/build-maintainers
 /task/acs-image-scan                        @konflux-ci/build-maintainers
@@ -36,15 +37,19 @@
 /task/update-infra-deployments              @konflux-ci/build-maintainers
 /task/upload-sbom-to-trustification         @konflux-ci/build-maintainers
 
+# renovate groupName=build
 /task/prefetch-dependencies         @konflux-ci/build-maintainers @brunoapimentel @eskultety @taylormadore
 /task/prefetch-dependencies-oci-ta  @konflux-ci/build-maintainers @brunoapimentel @eskultety @taylormadore
 
+# renovate groupName=build
 /task/generate-labels   @konflux-ci/build-maintainers @ralphbean
 
+# renovate groupName=ec
 /task/tkn-bundle                    @konflux-ci/ec
 /task/tkn-bundle-oci-ta             @konflux-ci/ec
 /task/verify-enterprise-contract    @konflux-ci/ec
 
+# renovate groupName=integration
 /task/clair-scan                @konflux-ci/integration-service-maintainers
 /task/clamav-scan               @konflux-ci/integration-service-maintainers
 /task/deprecated-image-check    @konflux-ci/integration-service-maintainers
@@ -54,6 +59,7 @@
 /task/sbom-json-check           @konflux-ci/integration-service-maintainers
 /task/validate-fbc              @konflux-ci/integration-service-maintainers
 
+# renovate groupName=integration
 /task/coverity-availability-check           @konflux-ci/integration-service-maintainers @kdudka
 /task/coverity-availability-check-oci-ta    @konflux-ci/integration-service-maintainers @kdudka
 /task/sast-coverity-check                   @konflux-ci/integration-service-maintainers @kdudka
@@ -65,14 +71,18 @@
 /task/sast-unicode-check                    @konflux-ci/integration-service-maintainers @kdudka
 /task/sast-unicode-check-oci-ta             @konflux-ci/integration-service-maintainers @kdudka
 
+# renovate groupName=preflight
 /task/ecosystem-cert-preflight-checks   @acornett21 @bcrochet @komish @skattoju
 
+# renovate groupName=eaas
 /task/provision-env-with-ephemeral-namespace    @amisstea @avi-biton @gbenhaim @omeramsc @yftacherzog
 
+# renovate groupName=rpm-tasks
 /task/generate-odcs-compose @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/rpms-signature-scan   @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/verify-signed-rpms    @amisstea @avi-biton @gbenhaim @yftacherzog
 
+# renovate groupName=eaas
 /stepactions/eaas-copy-secrets-to-ephemeral-cluster         @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
 /stepactions/eaas-create-ephemeral-cluster-hypershift-aws   @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
 /stepactions/eaas-get-ephemeral-cluster-credentials         @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
@@ -80,18 +90,23 @@
 /stepactions/eaas-get-supported-ephemeral-cluster-versions  @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
 /task/eaas-provision-space                                  @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
 
+# renovate groupName=build-vm-image
 /task/build-vm-image    @arewm @brianwcook @ralphbean @scoheb
 
+# renovate groupName=rpm-ostree
 /task/rpm-ostree        @cgwalters
 /task/rpm-ostree-oci-ta @cgwalters
 
+# renovate groupName=opm
 /task/operator-sdk-generate-bundle  @gurnben @jbpratt
 /task/opm-get-bundle-version        @gurnben @jbpratt
 /task/opm-render-bundles            @gurnben @jbpratt
 
+# renovate groupName=maven
 /task/build-maven-zip           @ligangty @yma96
 /task/build-maven-zip-oci-ta    @ligangty @yma96
 
+# renovate groupName=oci-copy
 /task/oci-copy          @ralphbean
 /task/oci-copy-oci-ta   @ralphbean
 
