renovate.json: update based on CODEOWNERS
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -40,6 +40,44 @@
         "mkosiarc",
         "brunoapimentel",
         "chmeliik"
+      ],
+      "matchFileNames": [
+        "task/acs-deploy-check/**",
+        "task/acs-image-check/**",
+        "task/acs-image-scan/**",
+        "task/apply-tags/**",
+        "task/build-image-index/**",
+        "task/build-image-manifest/**",
+        "task/buildah-10gb/**",
+        "task/buildah-20gb/**",
+        "task/buildah-24gb/**",
+        "task/buildah-6gb/**",
+        "task/buildah-8gb/**",
+        "task/buildah-min/**",
+        "task/buildah-oci-ta/**",
+        "task/buildah-remote-oci-ta/**",
+        "task/buildah-remote/**",
+        "task/buildah-rhtap/**",
+        "task/buildah/**",
+        "task/download-sbom-from-url-in-attestation/**",
+        "task/gather-deploy-images/**",
+        "task/generate-labels/**",
+        "task/git-clone-oci-ta/**",
+        "task/git-clone/**",
+        "task/init/**",
+        "task/prefetch-dependencies-oci-ta/**",
+        "task/prefetch-dependencies/**",
+        "task/push-dockerfile-oci-ta/**",
+        "task/push-dockerfile/**",
+        "task/show-sbom-rhdh/**",
+        "task/show-sbom/**",
+        "task/slack-webhook-notification/**",
+        "task/source-build-oci-ta/**",
+        "task/source-build/**",
+        "task/summary/**",
+        "task/update-deployment/**",
+        "task/update-infra-deployments/**",
+        "task/upload-sbom-to-trustification/**"
       ]
     },
     {
@@ -53,6 +91,11 @@
       "reviewers": [
         "zregvart",
         "lcarva"
+      ],
+      "matchFileNames": [
+        "task/tkn-bundle-oci-ta/**",
+        "task/tkn-bundle/**",
+        "task/verify-enterprise-contract/**"
       ]
     },
     {
@@ -73,6 +116,26 @@
         "kasemAlem",
         "jencull",
         "sonam1412"
+      ],
+      "matchFileNames": [
+        "task/clair-scan/**",
+        "task/clamav-scan/**",
+        "task/coverity-availability-check-oci-ta/**",
+        "task/coverity-availability-check/**",
+        "task/deprecated-image-check/**",
+        "task/fbc-related-image-check/**",
+        "task/fbc-validation/**",
+        "task/inspect-image/**",
+        "task/sast-coverity-check-oci-ta/**",
+        "task/sast-coverity-check/**",
+        "task/sast-shell-check-oci-ta/**",
+        "task/sast-shell-check/**",
+        "task/sast-snyk-check-oci-ta/**",
+        "task/sast-snyk-check/**",
+        "task/sast-unicode-check-oci-ta/**",
+        "task/sast-unicode-check/**",
+        "task/sbom-json-check/**",
+        "task/validate-fbc/**"
       ]
     },
     {
@@ -82,6 +145,9 @@
       "groupName": "preflight",
       "reviewers": [
         "skattoju"
+      ],
+      "matchFileNames": [
+        "task/ecosystem-cert-preflight-checks/**"
       ]
     },
     {
@@ -110,6 +176,61 @@
       ],
       "enabled": false,
       "groupName": "ignore"
+    },
+    {
+      "groupName": "build-vm-image",
+      "matchFileNames": [
+        "task/build-vm-image/**"
+      ]
+    },
+    {
+      "groupName": "eaas",
+      "matchFileNames": [
+        "stepactions/eaas-copy-secrets-to-ephemeral-cluster/**",
+        "stepactions/eaas-create-ephemeral-cluster-hypershift-aws/**",
+        "stepactions/eaas-get-ephemeral-cluster-credentials/**",
+        "stepactions/eaas-get-latest-openshift-version-by-prefix/**",
+        "stepactions/eaas-get-supported-ephemeral-cluster-versions/**",
+        "task/eaas-provision-space/**",
+        "task/provision-env-with-ephemeral-namespace/**"
+      ]
+    },
+    {
+      "groupName": "maven",
+      "matchFileNames": [
+        "task/build-maven-zip-oci-ta/**",
+        "task/build-maven-zip/**"
+      ]
+    },
+    {
+      "groupName": "oci-copy",
+      "matchFileNames": [
+        "task/oci-copy-oci-ta/**",
+        "task/oci-copy/**"
+      ]
+    },
+    {
+      "groupName": "opm",
+      "matchFileNames": [
+        "task/operator-sdk-generate-bundle/**",
+        "task/opm-get-bundle-version/**",
+        "task/opm-render-bundles/**"
+      ]
+    },
+    {
+      "groupName": "rpm-ostree",
+      "matchFileNames": [
+        "task/rpm-ostree-oci-ta/**",
+        "task/rpm-ostree/**"
+      ]
+    },
+    {
+      "groupName": "rpm-tasks",
+      "matchFileNames": [
+        "task/generate-odcs-compose/**",
+        "task/rpms-signature-scan/**",
+        "task/verify-signed-rpms/**"
+      ]
     }
   ],
   "postUpdateOptions": [
