--- a/pipelines/fbc-builder/kustomization.yaml
+++ b/pipelines/fbc-builder/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../template-build
+- ../docker-build-multi-platform-oci-ta
 
 patches:
 - path: patch.yaml
