--- a/pipelines/maven-zip-build/patch.yaml
+++ b/pipelines/maven-zip-build/patch.yaml
@@ -46,26 +46,31 @@
   value: "generic"
 # Remove unused tasks
 # kustomize build pipelines/template-build/ | yq ".spec.tasks.[].name" | nl -v 0
-#      0  init
-#      1  clone-repository
-#      2  prefetch-dependencies
-#      3  build-container
-#      4  build-image-index
-#      5  build-source-image
-#      6  deprecated-base-image-check
-#      7  clair-scan
-#      8  ecosystem-cert-preflight-checks
-#      9  sast-snyk-check
-#     10  clamav-scan
-#     11  apply-tags
-#     12  push-dockerfile
-#     13  rpms-signature-scan
+#  0	init
+#  1	clone-repository
+#  2	prefetch-dependencies
+#  3	build-container
+#  4	build-image-index
+#  5	build-source-image
+#  6	deprecated-base-image-check
+#  7	clair-scan
+#  8	ecosystem-cert-preflight-checks
+#  9	sast-snyk-check
+# 10	clamav-scan
+# 11	sast-coverity-check
+# 12	coverity-availability-check
+# 13	sast-shell-check
+# 14	sast-unicode-check
+# 15	apply-tags
+# 16	push-dockerfile
+# 17	rpms-signature-scan
+
 - op: remove
-  path: /spec/tasks/13  # rpms-signature-scan
+  path: /spec/tasks/17  # rpms-signature-scan
 - op: remove
-  path: /spec/tasks/12  # push-dockerfile
+  path: /spec/tasks/16  # push-dockerfile
 - op: remove
-  path: /spec/tasks/11  # apply-tags
+  path: /spec/tasks/15  # apply-tags
 - op: remove
   path: /spec/tasks/10  # clamav-scan
 - op: remove
@@ -110,6 +115,43 @@
   value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
 - op: replace
   path: /spec/tasks/4/runAfter
+  value:
+  - build-oci-artifact
+# Replace the params set and runAfter of sast-coverity-check
+- op: replace
+  path: /spec/tasks/5/params/0/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_DIGEST)"
+- op: replace
+  path: /spec/tasks/5/params/1/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
+# Replace the params set and runAfter of coverity-availability-check
+- op: replace
+  path: /spec/tasks/6/params/0/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_DIGEST)"
+- op: replace
+  path: /spec/tasks/6/params/1/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
+- op: replace
+  path: /spec/tasks/6/runAfter
+  value:
+  - build-oci-artifact
+# Replace the params set and runAfter of sast-shell-check
+- op: replace
+  path: /spec/tasks/7/params/0/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_DIGEST)"
+- op: replace
+  path: /spec/tasks/7/params/1/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
+- op: replace
+  path: /spec/tasks/7/runAfter
+  value:
+  - build-oci-artifact
+# Replace the params set and runAfter of sast-unicode-check
+- op: replace
+  path: /spec/tasks/8/params/0/value
+  value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
+- op: replace
+  path: /spec/tasks/8/runAfter
   value:
   - build-oci-artifact
 # change pipeline results
