--- a/task/buildah-remote-oci-ta/0.3/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.3/buildah-remote-oci-ta.yaml
@@ -84,6 +84,12 @@ spec:
     description: Whether to enable privileged mode
     name: PRIVILEGED_NESTED
     type: string
+  - default: cyclonedx
+    description: 'Select the SBOM format to generate. Valid values: spdx, cyclonedx.
+      Note: the SBOM from the prefetch task - if there is one - must be in the same
+      format.'
+    name: SBOM_TYPE
+    type: string
   - default: "false"
     description: Skip SBOM-related operations. This will likely cause EC policies
       to fail if enabled
@@ -186,6 +192,8 @@ spec:
       value: $(params.IMAGE_EXPIRES_AFTER)
     - name: PRIVILEGED_NESTED
       value: $(params.PRIVILEGED_NESTED)
+    - name: SBOM_TYPE
+      value: $(params.SBOM_TYPE)
     - name: SKIP_SBOM_GENERATION
       value: $(params.SKIP_SBOM_GENERATION)
     - name: SKIP_UNUSED_STAGES
@@ -614,6 +622,7 @@ spec:
           -e IMAGE="$IMAGE" \
           -e IMAGE_EXPIRES_AFTER="$IMAGE_EXPIRES_AFTER" \
           -e PRIVILEGED_NESTED="$PRIVILEGED_NESTED" \
+          -e SBOM_TYPE="$SBOM_TYPE" \
           -e SKIP_SBOM_GENERATION="$SKIP_SBOM_GENERATION" \
           -e SKIP_UNUSED_STAGES="$SKIP_UNUSED_STAGES" \
           -e SOURCE_CODE_DIR="$SOURCE_CODE_DIR" \
@@ -762,10 +771,24 @@ spec:
         echo "Skipping SBOM generation"
         exit 0
       fi
+
+      case $SBOM_TYPE in
+      cyclonedx)
+        syft_sbom_type=cyclonedx-json@1.5
+        ;;
+      spdx)
+        syft_sbom_type=spdx-json@2.3
+        ;;
+      *)
+        echo "Invalid SBOM type: $SBOM_TYPE. Valid: cyclonedx, spdx" >&2
+        exit 1
+        ;;
+      esac
+
       echo "Running syft on the source directory"
-      syft dir:"/var/workdir/$SOURCE_CODE_DIR/$CONTEXT" --output cyclonedx-json@1.5="/var/workdir/sbom-source.json"
+      syft dir:"/var/workdir/$SOURCE_CODE_DIR/$CONTEXT" --output "$syft_sbom_type"="/var/workdir/sbom-source.json"
       echo "Running syft on the image filesystem"
-      syft dir:"$(cat /shared/container_path)" --output cyclonedx-json@1.5="/var/workdir/sbom-image.json"
+      syft dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="/var/workdir/sbom-image.json"
     volumeMounts:
     - mountPath: /var/lib/containers
       name: varlibcontainers
@@ -800,12 +823,12 @@ spec:
         sboms_to_merge+=(cachi2:sbom-cachi2.json)
       fi
 
-      echo "Merging sboms: (${sboms_to_merge[*]}) => sbom-cyclonedx.json"
-      python3 /scripts/merge_sboms.py "${sboms_to_merge[@]}" >sbom-cyclonedx.json
+      echo "Merging sboms: (${sboms_to_merge[*]}) => sbom.json"
+      python3 /scripts/merge_sboms.py "${sboms_to_merge[@]}" >sbom.json
 
-      echo "Adding base images data to sbom-cyclonedx.json"
+      echo "Adding base images data to sbom.json"
       python3 /scripts/base_images_sbom_script.py \
-        --sbom=sbom-cyclonedx.json \
+        --sbom=sbom.json \
         --parsed-dockerfile=/shared/parsed_dockerfile.json \
         --base-images-digests=/shared/base_images_digests
 
@@ -816,10 +839,10 @@ spec:
       python3 /scripts/add_image_reference.py \
         --image-url "$IMAGE_URL" \
         --image-digest "$IMAGE_DIGEST" \
-        --input-file sbom-cyclonedx.json \
-        --output-file /tmp/sbom-cyclonedx.tmp.json
+        --input-file sbom.json \
+        --output-file /tmp/sbom.tmp.json
 
-      mv /tmp/sbom-cyclonedx.tmp.json sbom-cyclonedx.json
+      mv /tmp/sbom.tmp.json sbom.json
     securityContext:
       runAsUser: 0
     workingDir: /var/workdir
@@ -850,11 +873,11 @@ spec:
         update-ca-trust
       fi
 
-      cosign attach sbom --sbom sbom-cyclonedx.json --type cyclonedx "$(cat "$(results.IMAGE_REF.path)")"
+      cosign attach sbom --sbom sbom.json --type "$SBOM_TYPE" "$(cat "$(results.IMAGE_REF.path)")"
 
       # Remove tag from IMAGE while allowing registry to contain a port number.
       sbom_repo="${IMAGE%:*}"
-      sbom_digest="$(sha256sum sbom-cyclonedx.json | cut -d' ' -f1)"
+      sbom_digest="$(sha256sum sbom.json | cut -d' ' -f1)"
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
     volumeMounts:
